--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ keyed_priority_queue = "0.4"
 lazy_static = "1"
 lru = "0.12.0"
 mio = { version = "0.8.0", features = ["os-poll", "net"] }
-mysql_common = { version = "0.31", default-features = false }
+mysql_common = { version = "0.32", default-features = false }
 once_cell = "1.7.2"
 pem = "3.0"
 percent-encoding = "2.1.0"
@@ -75,7 +75,7 @@ optional = true
 waker-fn = "1"
 tempfile = "3.1.0"
 socket2 = { version = "0.5.2", features = ["all"] }
-tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
+tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
 
 [features]
 default = [
@@ -84,6 +84,7 @@ default = [
     "mysql_common/rust_decimal",
     "mysql_common/time",
     "mysql_common/frunk",
+    "mysql_common/chrono",
     "derive",
     "native-tls-tls",
     "binlog",
